[project]
name = "hamt"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordan Sherer",email = "jordan@widefido.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
